--- a/toolkit/legend/src/main/res/values/strings.xml
+++ b/toolkit/legend/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
   -->
 
 <resources>
+    <string name="title">Legend</string>
     <string name="symbol_description">symbol of a legend item</string>
 </resources>
