--- a/toolkit/legend/src/main/res/values/strings.xml
+++ b/toolkit/legend/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
 
 <resources>
     <string name="symbol_description">symbol of a legend item</string>
+    <string name="error">Error</string>
 </resources>
