--- a/toolkit/legend/src/main/res/values/strings.xml
+++ b/toolkit/legend/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
 <resources>
     <string name="title">Legend</string>
     <string name="symbol_description">symbol of a legend item</string>
+    <string name="error">Error</string>
 </resources>
