--- a/microapps/ArTabletopApp/app/src/main/res/values/strings.xml
+++ b/microapps/ArTabletopApp/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="failed_to_load_scene">Failed to load scene: %1$s</string>
     <string name="decline">Decline</string>
     <string name="accept">Accept</string>
+    <string name="privacy_info_not_accepted">Privacy Info not accepted</string>
+    <string name="show_privacy_info">Show Privacy Info</string>
 </resources>
