hud10837/add-privacy-info (#795)
* 200.6.0 Release - merge v.next into main (#680)

* enable the publication of artifacts which include the build number in the version.

* bump version

* add lambda to authenticator

* add util methods

* add lambda to DialogAuthenticator

* cherry pick to v.next (#103)

* use launchCustomTabs in OAuthUserSignInActivity

* fix issue with pressing cancel button

* Merge pull request #104 from Esri/sorenoid/update-auth-readme

use updated name of the auth dependency in README

* reinstate onWindowFocusChanged in OAuthUserSignInActivity

* use didLaunch logic in OAuthAuthenticator for lambda scenario as well

* rm context receivers

* remove ontopresumedactivitychanged

* Trigger onFacilityChanged along with the levelChanged when selectedLevelId is programmatically updated (#111)

* reorganize OAuthAuthenticator

* update readme

* Don't suggest singleInstance

* add doc to method

* eof newline

* move composable to activity scope

* mv viewmodel definition to class level

* mv Authenticator definition to setContent block

* pass vm as argument to auth app

* fix readme numbering

* add note about redirect uri

* update doc for new param

* simplify side effect

* Address pr comments

* rename Extensions file

* rework OAuthAuthenticator to move launcher

* update readme

* Deletes WebView's session if  `preferPrivateWebBrowserSession` is enabled  (#119)

* added geo composable map

* Update gradle

* Delete SceneComposable.kt

* Revert "Delete SceneComposable.kt"

This reverts commit 5f9b41ee2ba73ca97f4c937f079239a791ae4d68.

* upgrades to match the API's gradle versions so we can easily include the API as a composite build. Also clears some false warnings in gradle files

* renamed to module geo-compose

* fixes for displaying FloorFilter facilitySelector when Sites are not present in the map (#153)

* Create t9nmanifest.txt (#167)

* removed module 

--- a/microapps/ArTabletopApp/app/src/main/res/values/strings.xml
+++ b/microapps/ArTabletopApp/app/src/main/res/values/strings.xml
@@ -26,4 +26,9 @@
     <string name="initializing_overlay">Setting up AR...</string>
     <string name="failed_to_initialize_overlay">Failed to initialize: %1$s</string>
     <string name="failed_to_load_scene">Failed to load scene: %1$s</string>
+    <string name="decline">Decline</string>
+    <string name="accept">Accept</string>
+    <string name="privacy_info_not_accepted">Privacy Info not accepted</string>
+    <string name="show_privacy_info">Show Privacy Info</string>
+    <string name="top_bar_title">AR Table Top</string>
 </resources>
