--- a/toolkit/featureforms/src/main/res/values/strings.xml
+++ b/toolkit/featureforms/src/main/res/values/strings.xml
@@ -147,4 +147,20 @@
     <string name="tap_to_scan">Tap to scan</string>
     <string name="unable_to_open_the_camera">Unable to open the camera</string>
     <string name="value_must_be_a_guid">Value must be a valid GUID</string>
+    <string name="save">Save</string>
+    <string name="discard">Discard</string>
+    <string name="none_selected">None Selected</string>
+    <string name="the_form_has_validation_errors">The form has validation errors</string>
+    <string name="the_form_has_edits">The form has edits</string>
+    <string name="do_you_want_to_save_your_changes">Do you want to save your changes?</string>
+    <string name="terminal">Terminal : %1$s</string>
+    <string name="containment_visible">Containment Visible : %1$s</string>
+    <plurals name="you_have_errors_that_must_be_fixed_before_saving">
+        <item quantity="zero">You have %1$d errors that must be fixed before saving.</item>
+        <item quantity="one">You have %1$d error that must be fixed before saving.</item>
+        <item quantity="two">You have %1$d errors that must be fixed before saving</item>
+        <item quantity="few">You have %1$d errors that must be fixed before saving</item>
+        <item quantity="many">You have %1$d errors that must be fixed before saving</item>
+        <item quantity="other">You have %1$d errors that must be fixed before saving</item>
+    </plurals>
 </resources>
