--- a/toolkit/featureforms/src/main/res/values/strings.xml
+++ b/toolkit/featureforms/src/main/res/values/strings.xml
@@ -147,6 +147,11 @@
     <string name="tap_to_scan">Tap to scan</string>
     <string name="unable_to_open_the_camera">Unable to open the camera</string>
     <string name="value_must_be_a_guid">Value must be a valid GUID</string>
+    <string name="delete_attachment_title">Delete Attachment?</string>
+    <string name="delete_attachment_confirmation">Are you sure you want to delete this attachment?</string>
+    <string name="download_failed">Unable to download this file.</string>
+    <string name="file_size_exceeds_limit">File Size Exceeds Limit</string>
+    <string name="unsupported_file_type">Unsupported File Type</string>
     <string name="save">Save</string>
     <string name="discard">Discard</string>
     <string name="none_selected">None Selected</string>
