Changes to enhance the preplanned map areas list

--- a/toolkit/offline/src/main/res/values/strings.xml
+++ b/toolkit/offline/src/main/res/values/strings.xml
@@ -15,5 +15,8 @@
   -->
 
 <resources>
+    <string name="map_areas">Map Areas</string>
+    <string name="thumbnail_description">PortalItem Thumbnail</string>
+    <string name="download">Download</string>
     <string name="error">Error</string>
 </resources>
