updated worker design

--- a/toolkit/offline/src/main/res/values/strings.xml
+++ b/toolkit/offline/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
 
 <resources>
     <string name="error">Error</string>
+    <string name="cancel_notification">com.arcgismaps.toolkit.offline.CANCEL_NOTIFICATION</string>
 </resources>
