--- a/microapps/OverviewMapApp/app/src/main/res/values/strings.xml
+++ b/microapps/OverviewMapApp/app/src/main/res/values/strings.xml
@@ -17,5 +17,5 @@
   -->
 
 <resources>
-    <string name="app_name">OverviewMapAppApp</string>
+    <string name="app_name">OverviewMapApp</string>
 </resources>
