--- a/microapps/ArWorldScaleApp/app/src/main/res/values/strings.xml
+++ b/microapps/ArWorldScaleApp/app/src/main/res/values/strings.xml
@@ -29,6 +29,9 @@
     <string name="privacy_info_dropdown_item">Privacy Info</string>
     <string name="privacy_info_not_accepted">Privacy Info not accepted</string>
     <string name="show_privacy_info">Show Privacy Info</string>
+    <string name="check_vps">Check VPS</string>
+    <string name="vps_available">VPS Status: Available</string>
+    <string name="vps_unavailable">VPS Status: Unvailable</string>
     <string name="decline">Decline</string>
     <string name="accept">Accept</string>
 </resources>
