--- a/toolkit/offline/src/main/res/values/strings.xml
+++ b/toolkit/offline/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="map_areas">Map Areas</string>
     <string name="thumbnail_description">PortalItem Thumbnail</string>
     <string name="download">Download</string>
+    <string name="open">Open</string>
     <string name="error">Error</string>
     <string name="loading">Loading</string>
     <string name="loading_failed">Loading failed</string>
@@ -27,4 +28,5 @@
     <string name="downloaded">Downloaded</string>
     <string name="downloading">Downloading</string>
     <string name="download_failed">Download Failed</string>
+    <string name="currently_open">Currently Open</string>
 </resources>
