--- a/toolkit/featureforms/src/main/res/values/strings.xml
+++ b/toolkit/featureforms/src/main/res/values/strings.xml
@@ -170,6 +170,7 @@
     <string name="remove_association_tooltip">Only removes the association. The feature remains.</string>
     <string name="remove">Remove</string>
     <string name="association_settings">Association Settings</string>
+    <string name="percent_along_edge">%1$d %%</string>
     <plurals name="you_have_errors_that_must_be_fixed_before_saving">
         <item quantity="zero">You have %1$d errors that must be fixed before saving.</item>
         <item quantity="one">You have %1$d error that must be fixed before saving.</item>
