Check VPS availability (#845)
* Hud10837/init worldscale feature branch (#697)

* Create WorldScape app

* create skeleton of WorldScaleSceneView classes and functions

* initial working proto of world scale

* initial working proto of world scale microapp

* backup

* remove calibration controls

* rm xr manifest permission

* Amend since tags

* Amend copyrights

* Reformat and optimize imports

* add doc to ARHelpers

* clean up files

* Fix log tag

* Fix copyright year

* Fix copyright year

* Fix not installed string

* Fix copyright year

* set application context automatically

* add todo

* rm set app context

* rm unused import

* update worldscale public api file (#703)

* Add Joyslider Composable + tests (#707)

* Pull vnext into WorldScaleSceneView feature branch (#712)

* Hud10837/improve tabletop positioning (#695)

* debug

* backup

* change version of hit test used

* revert unnecessary changes

* rever unnecessary changes

* revert microapps to original state

* revert microapps to original state

* clean up business logic files

* change extensiongetter for transformation matrix

* use pointerInput and store offset

* use pointerInput and store offset

* add comment

* Authenticator: UsernamePassword UI Improvements (#699)

* adds hide/show password icon
* adds test to show/hide password

* Authenticator: Dismiss UsernamePassword after credential is provided (#696)

* use ttsv from feature branch

* Add content description to Joyslider preview

---------

Co-authored-by: Erick Lopez Solis <erick_solis@esri.com>

* WorldScaleSceneView: Handle permissions and implement world tracking (#709)

* add tracking modes

* update WorldScaleSceneView to use LocationDataSource from TrackingMode

* add todos

* rm tracking mode

* make initialization of LDS and Camera Feed sequential

* add permission state backup

* fix permission state

* add doc

* fix usage of PermissionState i

--- a/microapps/ArWorldScaleApp/app/src/main/res/values/strings.xml
+++ b/microapps/ArWorldScaleApp/app/src/main/res/values/strings.xml
@@ -29,6 +29,9 @@
     <string name="privacy_info_dropdown_item">Privacy Info</string>
     <string name="privacy_info_not_accepted">Privacy Info not accepted</string>
     <string name="show_privacy_info">Show Privacy Info</string>
+    <string name="check_vps">Check VPS</string>
+    <string name="vps_available">VPS Status: Available</string>
+    <string name="vps_unavailable_unknown">VPS Status: Unavailable or unknown</string>
     <string name="decline">Decline</string>
     <string name="accept">Accept</string>
     <string name="tracking_error_icon_description">Warning: Tracking Error</string>
