ArFlyoverApp: check for and install Google Play Services for AR

--- a/microapps/ArFlyoverApp/app/src/main/res/values/strings.xml
+++ b/microapps/ArFlyoverApp/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
 
 <resources>
     <string name="app_name">ArFlyoverApp</string>
+    <string name="arcore_not_installed_screen_message">Google Play Services for AR must be installed to run this app.</string>
 </resources>
