--- a/toolkit/offline/src/main/res/values/strings.xml
+++ b/toolkit/offline/src/main/res/values/strings.xml
@@ -29,4 +29,8 @@
     <string name="downloading">Downloading</string>
     <string name="download_failed">Download Failed</string>
     <string name="currently_open">Currently Open</string>
+    <string name="description">Description</string>
+    <string name="download_map_area">Download Map Area</string>
+    <string name="delete_map_area">Delete Map Area</string>
+    <string name="no_image_available">No Image Available</string>
 </resources>
