--- a/microapps/ArFlyoverApp/app/src/main/res/values/strings.xml
+++ b/microapps/ArFlyoverApp/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="accept">Accept</string>
     <string name="privacy_info_not_accepted">Privacy Info not accepted</string>
     <string name="show_privacy_info">Show Privacy Info</string>
+    <string name="setting_up_ar">Setting up AR...</string>
+    <string name="failed_to_initialize_ar">Failed to initialize: %1$s</string>
+    <string name="failed_to_load_scene">Failed to load scene: %1$s</string>
 </resources>
