Level of detail (#902)

--- a/toolkit/offline/src/main/res/values/strings.xml
+++ b/toolkit/offline/src/main/res/values/strings.xml
@@ -45,4 +45,29 @@
     <string name="empty_on_demand_message">There are no map areas for this map. Tap the button below to get started.</string>
     <string name="offline_disabled">Offline Disabled</string>
     <string name="offline_disabled_message">The map is not enabled for offline use.</string>
+    <string name="level_of_detail">Level of detail</string>
+    <string name="room">Room</string>
+    <string name="rooms">Rooms</string>
+    <string name="house_property">House Property</string>
+    <string name="houses">Houses</string>
+    <string name="small_building">Small Building</string>
+    <string name="building">Building</string>
+    <string name="buildings">Buildings</string>
+    <string name="street">Street</string>
+    <string name="streets">Streets</string>
+    <string name="neighborhood">Neighborhood</string>
+    <string name="town">Town</string>
+    <string name="city">City</string>
+    <string name="cities">Cities</string>
+    <string name="metropolitan_area">Metropolitan Area</string>
+    <string name="county">County</string>
+    <string name="counties">Counties</string>
+    <string name="state_province">State/Province</string>
+    <string name="states_provinces">States/Provinces</string>
+    <string name="countries_small">Countries (Small)</string>
+    <string name="countries_big">Countries (Big)</string>
+    <string name="continent">Continent</string>
+    <string name="world_small">World (Small)</string>
+    <string name="world_big">World (Big)</string>
+    <string name="world">World</string>
 </resources>
