--- a/toolkit/offline/src/main/res/values/strings.xml
+++ b/toolkit/offline/src/main/res/values/strings.xml
@@ -33,8 +33,10 @@
     <string name="description">Description</string>
     <string name="download_map_area">Download Map Area</string>
     <string name="remove_download">Remove Download</string>
+    <string name="delete_download">Delete Download</string>
     <string name="no_image_available">No Image Available</string>
     <string name="refresh">Refresh</string>
+    <string name="cancelled">Cancelled</string>
     <string name="no_internet_connection_error_message">No Internet Connection</string>
     <string name="no_internet_error_message">No internet connection. Showing downloaded areas only.</string>
     <string name="no_map_areas_error_message">Could not retrieve map areas for this map.</string>
