--- a/microapps/FeatureFormsApp/app/src/main/res/values/strings.xml
+++ b/microapps/FeatureFormsApp/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="edit">Edit</string>
     <string name="select_a_feature_template">Select a Feature Template</string>
     <string name="default_feature">Default Feature</string>
+    <string name="navigation">Navigation</string>
 </resources>
