--- a/toolkit/featureforms/src/main/res/values/strings.xml
+++ b/toolkit/featureforms/src/main/res/values/strings.xml
@@ -162,7 +162,6 @@
     <string name="terminal">Terminal</string>
     <string name="terminal_with_value">Terminal : %1$s</string>
     <string name="containment_visible">Containment Visible</string>
-    <string name="containment_visible_value">Containment Visible : %1$s</string>
     <string name="fraction_along_edge">Fraction Along Edge</string>
     <string name="from_element">From Element</string>
     <string name="to_element">To Element</string>
@@ -172,6 +171,8 @@
     <string name="remove">Remove</string>
     <string name="association_settings">Association Settings</string>
     <string name="percent_along_edge">%1$d %%</string>
+    <string name="visible_content">Visible Content</string>
+    <string name="content">Content</string>
     <plurals name="you_have_errors_that_must_be_fixed_before_saving">
         <item quantity="zero">You have %1$d errors that must be fixed before saving.</item>
         <item quantity="one">You have %1$d error that must be fixed before saving.</item>
